[tool.poetry]
name = "repl_python3_News-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pandas = "^1.4.1"
web3 = "^5.28.0"
replit = "^3.2.4"
py-cord = "^1.7.3"
discord-ui = "^5.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
